--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -24,4 +24,18 @@
     border: 2px solid white; }
     .jumbotron .lang-logo img {
       max-width: 100%; }
+table {
+   font-family: arial, sans-serif;
+   border-collapse: collapse;
+   width: 100%;
+ }
 
+td, th {
+  border: 1px solid black;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
